# podcast-to-text

./: .gitignore  LICENSE  README-en.md  README-zh.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: decisions.md  glossary.md  output-policy.md  transcription-calibration.md
scripts/: pyproject.toml  requirements.txt  run_cli.py  validate_result.py
scripts/podcast_to_text/: __init__.py  calibration.py  cli.py  files.py  transcriber.py
scripts/tests/: test_cli.py  test_transcriber.py  test_xiaoyuzhou.py
skills/chinese-srt-adaptation/: SKILL.md
skills/chinese-srt-adaptation/agents/: openai.yaml
skills/chinese-srt-adaptation/scripts/: validate_srt_alignment.py
src/podcast_to_text/: __init__.py  audio.py  cli.py  downloader.py  outputs.py  transcriber.py  xiaoyuzhou.py  youtube.py
tests/: test_cli.py  test_files.py  test_outputs.py  test_skill_validation.py  test_youtube.py
