[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-to-text"
version = "0.1.0"
description = "Bundled CLI runtime for the podcast-to-text skill."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12.0",
    "faster-whisper>=1.2.1",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "yt-dlp>=2026.6.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
podcast-to-text = "podcast_to_text.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
